[package]
name = "ros2-latency-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
futures = "0.3.30"
r2r = "0.9.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
